fix(forms): apply consistent spacing between label and form control

--- a/projects/angular/src/forms/styles/_containers.clarity.scss
+++ b/projects/angular/src/forms/styles/_containers.clarity.scss
@@ -81,6 +81,10 @@
     display: inline-block;
   }
 
+  .clr-control-label ~ .clr-control-container {
+    margin-top: tokens.$cds-global-space-3;
+  }
+
   .clr-control-inline {
     @include forms-mixins.form-inline-input();
   }
@@ -137,6 +141,10 @@
       width: auto;
     }
 
+    .clr-control-label ~ .clr-control-container {
+      margin-top: 0;
+    }
+
     .clr-form-control {
       display: flex;
       flex-direction: row;
@@ -165,6 +173,10 @@
 
     .clr-control-label {
       margin-top: tokens.$cds-global-space-3;
+    }
+
+    .clr-control-label ~ .clr-control-container {
+      margin-top: 0;
     }
 
     .clr-form-control {
