--- a/projects/angular/src/forms/styles/_textarea.clarity.scss
+++ b/projects/angular/src/forms/styles/_textarea.clarity.scss
@@ -14,7 +14,6 @@
   .clr-textarea-wrapper {
     white-space: nowrap;
     display: flex;
-    margin-top: tokens.$cds-global-space-5;
     .clr-validate-icon {
       margin-left: 0;
     }
